[gd_scene load_steps=3 format=3 uid="uid://bkq8x5y0x8dxm"]

[ext_resource type="Script" uid="uid://bw8vgduoblp6v" path="res://scripts/PauseMenu.gd" id="1_2x4y5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1x2y3"]
bg_color = Color(0, 0, 0, 0.8)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2x4y5")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1x2y3")

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="MenuContainer"]
layout_mode = 2
text = "GAME PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Resume"

[node name="HSeparator2" type="HSeparator" parent="MenuContainer"]
layout_mode = 2

[node name="SettingsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Settings"

[node name="HSeparator3" type="HSeparator" parent="MenuContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Main Menu"

[node name="HSeparator4" type="HSeparator" parent="MenuContainer"]
layout_mode = 2

[node name="QuitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
text = "Quit Game"
